--- a/src/app/components/home/home/home.page.html
+++ b/src/app/components/home/home/home.page.html
@@ -1,20 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <div id="container">
+        <ion-card *ngFor="let item of menu" routerLink="/bussines/{{item.name}}">
+            <img src="assets/images/home/{{item.img}}" />
+            <p>{{item.label | uppercase}}</p>
+        </ion-card>
+        <ion-item (click)="openEmergencias()">
+            <p>emergencias</p>
+        </ion-item>
+    </div>
 </ion-content>
