--- a/src/app/components/home/home/home.page.scss
+++ b/src/app/components/home/home/home.page.scss
@@ -1,27 +1,18 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-card {
+    position: relative;
+    max-height: 150px;
+    img {
+        width: 100%;
+        height: auto;
+    }
+    p{
+        position: absolute;
+        bottom: 0px;
+        right: -10px;
+        background: #ff9101;
+        background: linear-gradient(90deg, rgba(255, 145, 1, 0) 1%, #ff9101 31%);
+        color: #fff;
+        padding: 3px 20px 3px 27px;
+        font-weight: 600;
+    }
 }
