resources & emergencias img

--- a/src/app/components/home/home/home.page.html
+++ b/src/app/components/home/home/home.page.html
@@ -6,8 +6,8 @@
             <img src="assets/images/home/{{item.img}}" />
             <p>{{item.label | uppercase}}</p>
         </ion-card>
-        <ion-item (click)="openEmergencias()">
-            <p>emergencias</p>
-        </ion-item>
+        <ion-card (click)="openEmergencias()">
+            <img src="assets/images/emergencias/emergencias.png" alt="">
+        </ion-card>
     </div>
 </ion-content>
