--- a/src/app/components/home/home/home.page.scss
+++ b/src/app/components/home/home/home.page.scss
@@ -15,4 +15,23 @@ ion-card {
         padding: 3px 20px 3px 27px;
         font-weight: 600;
     }
+
+    ion-col{
+        position: inherit;
+        text-align: center;
+        h3{
+            font-size: 28px;
+            margin: 18px 0 0 0;
+            font-weight: 100;
+        }
+        h4{
+            font-size: 31px;
+            font-weight: 600;
+            margin: 8px 0 0 0;
+        }
+        img{
+            max-height: 100px;
+            width: auto;
+        }
+    }
 }
