update package & fixes

--- a/src/app/components/bussines/bussines/bussines.component.html
+++ b/src/app/components/bussines/bussines/bussines.component.html
@@ -51,7 +51,7 @@
                 <div class="name">
                     <p>{{item.NAME}}</p>
                 </div>
-                <div>
+                <div class="direccion">
                     {{item.ADRESS}}
                 </div>
             </ion-card-content>
