--- a/src/app/components/detail/detail/detail.component.html
+++ b/src/app/components/detail/detail/detail.component.html
@@ -2,7 +2,7 @@
 
 <ion-content fullscreen>
     <div class="container-img">
-        <ion-img alt="Aragrill Fusion" [src]="avatar"></ion-img>
+        <ion-img [src]="avatar"></ion-img>
         <div class="centered">
             <p>{{nombre | uppercase}}</p>
         </div>
