--- a/src/app/components/home/home/home.page.scss
+++ b/src/app/components/home/home/home.page.scss
@@ -14,18 +14,19 @@ ion-card {
         color: #fff;
         padding: 3px 20px 3px 27px;
         font-weight: 600;
+        font-size: 4vw;
     }
 
     ion-col{
         position: inherit;
         text-align: center;
         h3{
-            font-size: 28px;
+            font-size: 6vw;
             margin: 18px 0 0 0;
             font-weight: 100;
         }
         h4{
-            font-size: 31px;
+            font-size: 6vw;
             font-weight: 600;
             margin: 8px 0 0 0;
         }
