--- a/src/app/components/index/index/index.component.html
+++ b/src/app/components/index/index/index.component.html
@@ -7,20 +7,33 @@
 
         <section class="social">
 
-            <ion-chip class="facebook" (click)="facebookSignIn()">
-                <ion-icon name="logo-facebook"></ion-icon>
-                <ion-label>Continuar con Facebook</ion-label>
-            </ion-chip>
-            <br>
-            <ion-chip class="google" (click)="googleSignIn()">
-                <ion-icon name="logo-google"></ion-icon>
-                <ion-label>Continuar con Google</ion-label>
-            </ion-chip>
-            <br>
-            <ion-chip class="twitter" (click)="twitterSignIn()">
-                <ion-icon name="logo-twitter"></ion-icon>
-                <ion-label>Continuar con Twitter</ion-label>
-            </ion-chip>
+            <ion-grid>
+                <ion-row>
+                    <ion-col>
+                        <ion-chip class="facebook" (click)="facebookSignIn()">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                            <ion-label>Continuar con Facebook</ion-label>
+                        </ion-chip>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col>
+                        <ion-chip class="google" (click)="googleSignIn()">
+                            <ion-icon name="logo-google"></ion-icon>
+                            <ion-label>Continuar con Google</ion-label>
+                        </ion-chip>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col>
+                        <ion-chip class="twitter" (click)="twitterSignIn()">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                            <ion-label>Continuar con Twitter</ion-label>
+                        </ion-chip>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
         </section>
     </div>
+    <p class="footer">Ruta del Puma © 2021</p>
 </ion-content>
