--- a/src/app/components/index/index/index.component.scss
+++ b/src/app/components/index/index/index.component.scss
@@ -4,9 +4,14 @@ ion-content{
 
 #container {
     text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 
     .logo{
-        margin-top:80px;
+        margin-top:30px;
         margin-bottom: 120px;
         img{
             height: 100%;
@@ -15,15 +20,14 @@ ion-content{
     }
 
     .social{
-        margin: 20px 0 0 0;
+        margin: 0 7px 0 0;
         ion-chip{
             color: #fff;
             text-align: left;
-            font-size: 17px;
-            width: 300px;
-            padding: 5px 12px 5px 20px;
-            height: 38px;
-            margin-bottom: 10px;
+            font-size: 5vw;
+            width: 90%;
+            font-weight: 300;
+            padding: 20px 15px;
             &.facebook {
                 --background: #1877f2;
             }
@@ -39,6 +43,17 @@ ion-content{
             }
         }
     }
+
+}
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    right: 0;
+    color: #d8d8d8;
+    font-size: 3.5vw;
 }
 
 
