--- a/src/app/components/detail/detail/detail.component.html
+++ b/src/app/components/detail/detail/detail.component.html
@@ -95,7 +95,7 @@
     </ion-infinite-scroll>
 
     <ion-card class="form-nothing" *ngIf="dvShowNotComments">
-        <em>Nadie ha ecrito aún...</em>
+        <em>Nadie ha escrito aún...</em>
     </ion-card>
 
 </ion-content>
